[package]
name = "window_focus"
version = "0.1.0"
authors = ["mdrokz <mohammadmunshi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.winapi]
version = "0.3"
features = ["winuser","minwindef","psapi","errhandlingapi","windef"]